--- a/Source/NHibernate/NHibernate.csproj
+++ b/Source/NHibernate/NHibernate.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net8.0</TargetFramework>
+	<TargetFramework>net9.0</TargetFramework>
 	<AssemblyName>Keon.NHibernate</AssemblyName>
 	<RootNamespace>Keon.NHibernate</RootNamespace>
 	<Authors>darakeon</Authors>
@@ -14,10 +14,10 @@
 	<RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
 	<PackageTags>utility nhibernate orm</PackageTags>
-	<PackageReleaseNotes>Add min projection</PackageReleaseNotes>
+	<PackageReleaseNotes>Upgrade to .NET 9.0</PackageReleaseNotes>
 	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>5.2.0</Version>
+	<Version>6.0.0</Version>
 	<PackageIcon>image.png</PackageIcon>
   </PropertyGroup>
 
@@ -27,7 +27,7 @@
 
   <ItemGroup>
 	<PackageReference Include="FluentNHibernate" Version="3.4.0" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
 	<PackageReference Include="NHibernate" Version="5.5.2" />
 	<PackageReference Include="System.Net.Http" Version="4.3.4" />
 	<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
