--- a/Source/Util/Util.csproj
+++ b/Source/Util/Util.csproj
@@ -14,10 +14,10 @@
 	<RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
 	<PackageTags>utility</PackageTags>
-	<PackageReleaseNotes>Upgrade to .NET 8.0</PackageReleaseNotes>
+	<PackageReleaseNotes>Add inner exception to specific exception</PackageReleaseNotes>
 	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>5.0.0</Version>
+	<Version>5.1.0</Version>
 	<PackageIcon>image.png</PackageIcon>
   </PropertyGroup>
 
