--- a/Source/NHibernate/NHibernate.csproj
+++ b/Source/NHibernate/NHibernate.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	<TargetFramework>net8.0</TargetFramework>
@@ -17,7 +17,7 @@
 	<PackageReleaseNotes>Improve transaction error message with inner exception for rollback</PackageReleaseNotes>
 	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>5.3.4</Version>
+	<Version>5.3.5</Version>
 	<PackageIcon>image.png</PackageIcon>
   </PropertyGroup>
 
@@ -27,7 +27,7 @@
 
   <ItemGroup>
 	<PackageReference Include="FluentNHibernate" Version="3.4.1" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
 	<PackageReference Include="NHibernate" Version="5.5.2" />
 	<PackageReference Include="System.Net.Http" Version="4.3.4" />
 	<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
